Convert to an rmarkdown site

--- a/practical-confounding-solutions.Rmd
+++ b/practical-confounding-solutions.Rmd
@@ -1,11 +1,12 @@
 ---
 title: "Directed acyclic graphs and confounding"
-pagetitle: "DAGs and confounding"
+pagetitle: "DAGs and confounding with solutions"
 ---
 
 ```{r include=FALSE}
-params <- list(include = FALSE)
+params <- list(include = TRUE)
 ```
 
 ```{r child='_practical-confounding.Rmd'}
 ```
+
