Add details sessioninfo

--- a/practical-confounding-solutions.Rmd
+++ b/practical-confounding-solutions.Rmd
@@ -10,3 +10,7 @@ params <- list(include = TRUE)
 ```{r child='_practical-confounding.Rmd'}
 ```
 
+```{r echo=FALSE}
+details::details(sessioninfo::session_info(),
+                 summary = "<H4>Session info</H4>")
+```
