Add adjusting for L DAG

--- a/_practical-confounding.Rmd
+++ b/_practical-confounding.Rmd
@@ -81,8 +81,25 @@ DiagrammeR::grViz("
 
 A pathway is closed if
 
-- We adjust for a variable that's not a collider on the pathway
-- There's a collider on the pathway  
+- We adjust for a variable that's not a collider on the pathway, e.g. adjusting for $L$ indicated with the box closes the path $X \leftarrow L \rightarrow Y$
+
+```{r, echo=FALSE}
+DiagrammeR::grViz("
+      digraph confounder {
+      graph [rankdir=TB]
+      node [shape=plaintext, height=0.3, width=0.3]
+      X [label=<<I>X</I>>]
+      Y [label=<<I>Y</I>>]
+      node [shape=box, height=0.3, width=0.3]
+      L [label=<<I>L</I>>]
+      { rank = same; X Y }
+      L -> X
+      L -> Y
+      }
+      ", height = 200)
+```
+
+- There's a collider on the pathway, i.e., in the collider DAG the path $X \rightarrow \text{Collider} \leftarrow Y$ is closed (without adjusting for the collider)  
 
 ## Question 1
 
